Entrega definitiva p6 y su PDF